// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`api cloudproviderCredentials should delete a cloudProvider DNS credential (secret / no binding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/dns-secret",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete a cloudProvider DNS credential (secret / no binding) 2`] = `{}`;

exports[`api cloudproviderCredentials should delete a cloudProvider credential (workloadidentity / no binding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/workloadidentities/wl-foo-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete a cloudProvider credential (workloadidentity / no binding) 2`] = `{}`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (credentialsbinding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings/foo-infra3-secret3-credentialsbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings/foo-infra3-secret3-credentialsbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (credentialsbinding) 2`] = `{}`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (secretbinding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3-secret2-secretbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret2",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3-secret2-secretbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (secretbinding) 2`] = `{}`;

exports[`api cloudproviderCredentials should patch an own cloudProvider credential (secret) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "put",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "name": "secret1",
        "namespace": "garden-foo",
      },
    },
  ],
]
`;

exports[`api cloudproviderCredentials should patch an own cloudProvider credential (secret) 2`] = `
{
  "secret": {
    "data": {
      "key": "Zm9vS2V5",
      "secret": "Zm9vU2VjcmV0",
    },
    "metadata": {
      "name": "secret1",
      "namespace": "garden-foo",
      "resourceVersion": "43",
    },
  },
}
`;

exports[`api cloudproviderCredentials should re-create an own cloudProvider credential (secret) when patching an orphaned binding 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "put",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret4",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "name": "secret4",
        "namespace": "garden-foo",
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "name": "secret4",
        "namespace": "garden-foo",
      },
    },
  ],
]
`;

exports[`api cloudproviderCredentials should re-create an own cloudProvider credential (secret) when patching an orphaned binding 2`] = `
{
  "secret": {
    "data": {
      "key": "Zm9vS2V5",
      "secret": "Zm9vU2VjcmV0",
    },
    "metadata": {
      "name": "secret4",
      "namespace": "garden-foo",
      "resourceVersion": "42",
    },
  },
}
`;
